# Olive

./: Makefile  README.md  docker-compose.yml
client/: Dockerfile  next.config.js  package.json
client/src/app/: layout.tsx  page.tsx
data/: README.md  db.py  pyproject.toml
data/models/: dogs.py
data/schemas/: dogs.py
data/scripts/: create_tables.py  remove_tables.py
pipelines/: Dockerfile  dogs.py  requirements.txt
server/: Dockerfile  requirements.txt
server/app/: main.py
server/app/routes/: dogs.py
