[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olive-data"
version = "0.0.1"
description = "Shared data resources."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "pydantic"
]

[tool.setuptools]
packages = ["models", "schemas"]